# serializer version: 1
# name: test_diagnostics_config_entry
  dict({
    'config_entry_data': dict({
      'auth_implementation': 'miele',
      'token': dict({
        'access_token': '**REDACTED**',
        'expires_in': 86399,
        'refresh_token': '**REDACTED**',
        'token_type': 'Bearer',
      }),
    }),
    'miele_data': dict({
      'actions': dict({
        '000186528088': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
          ]),
          'ventilationStep': list([
          ]),
        }),
        'Appliance_1': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
          ]),
          'ventilationStep': list([
          ]),
        }),
        'Appliance_2': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
          ]),
          'ventilationStep': list([
          ]),
        }),
        'Appliance_Oven': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
          ]),
          'ventilationStep': list([
          ]),
        }),
      }),
      'devices': dict({
        '000186528088': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '44',
              'fabNumber': '000186528088',
              'matNumber': '11387290',
              'swids': list([
                '5975',
                '20456',
                '25213',
                '25191',
                '25446',
                '25205',
                '25447',
                '25319',
              ]),
              'techType': 'WCI870',
            }),
            'deviceName': '',
            'protocolVersion': 4,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Washing machine',
              'value_raw': 1,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '08.32',
              'techType': 'EK057',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': '',
              'value_raw': 0,
            }),
            'ambientLight': None,
            'batteryLevel': None,
            'coreTargetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'coreTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': None,
            'elapsedTime': list([
              0,
              0,
            ]),
            'light': None,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 0,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': '',
              'value_raw': 0,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': True,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'Off',
              'value_raw': 1,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '',
              'value_raw': None,
            }),
          }),
        }),
        'Appliance_1': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '21',
              'fabNumber': 'Appliance_1',
              'matNumber': '10805070',
              'swids': list([
                '4497',
              ]),
              'techType': 'FNS 28463 E ed/',
            }),
            'deviceName': '',
            'protocolVersion': 201,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Freezer',
              'value_raw': 20,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '31.17',
              'techType': 'EK042',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': '',
              'value_raw': 0,
            }),
            'ambientLight': None,
            'batteryLevel': None,
            'coreTargetTemperature': list([
            ]),
            'coreTemperature': list([
            ]),
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': None,
            'elapsedTime': list([
            ]),
            'light': None,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 0,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': '',
              'value_raw': 0,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': False,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'In use',
              'value_raw': 5,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': -18,
                'value_raw': -1800,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': -18,
                'value_raw': -1800,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '',
              'value_raw': None,
            }),
          }),
        }),
        'Appliance_2': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '17',
              'fabNumber': 'Appliance_2',
              'matNumber': '10804770',
              'swids': list([
                '4497',
              ]),
              'techType': 'KS 28423 D ed/c',
            }),
            'deviceName': '',
            'protocolVersion': 201,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Refrigerator',
              'value_raw': 19,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '31.17',
              'techType': 'EK042',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': '',
              'value_raw': 0,
            }),
            'ambientLight': None,
            'batteryLevel': None,
            'coreTargetTemperature': list([
            ]),
            'coreTemperature': list([
            ]),
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': None,
            'elapsedTime': list([
            ]),
            'light': None,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 0,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': '',
              'value_raw': 0,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': False,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'In use',
              'value_raw': 5,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': 4,
                'value_raw': 400,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': 4,
                'value_raw': 400,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '',
              'value_raw': None,
            }),
          }),
        }),
        'Appliance_Oven': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '00',
              'fabNumber': '123456',
              'matNumber': '',
              'swids': list([
                'swid00',
              ]),
              'techType': 'H7264B',
            }),
            'deviceName': '',
            'protocolVersion': 4,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Oven',
              'value_raw': 12,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '08.21',
              'techType': 'EK057',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': 'Fan plus',
              'value_raw': 13,
            }),
            'ambientLight': None,
            'batteryLevel': None,
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': None,
            'elapsedTime': list([
              0,
              0,
            ]),
            'light': 2,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 0,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': 'Own program',
              'value_raw': 1,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': False,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'Programmed',
              'value_raw': 3,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': '180.0',
                'value_raw': 18000,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '',
              'value_raw': None,
            }),
          }),
        }),
      }),
    }),
  })
# ---
# name: test_diagnostics_device
  dict({
    'data': dict({
      'auth_implementation': 'miele',
      'token': dict({
        'access_token': '**REDACTED**',
        'expires_in': 86399,
        'refresh_token': '**REDACTED**',
        'token_type': 'Bearer',
      }),
    }),
    'info': dict({
      'manufacturer': 'Miele',
      'model': 'WCI870',
    }),
    'miele_data': dict({
      'actions': dict({
        '000186528088': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
          ]),
          'ventilationStep': list([
          ]),
        }),
        'Appliance_1': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
          ]),
          'ventilationStep': list([
          ]),
        }),
        'Appliance_2': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
          ]),
          'ventilationStep': list([
          ]),
        }),
        'Appliance_Oven': dict({
          'ambientLight': list([
          ]),
          'colors': list([
          ]),
          'deviceName': True,
          'light': list([
          ]),
          'modes': list([
          ]),
          'powerOff': False,
          'powerOn': True,
          'processAction': list([
          ]),
          'programId': list([
          ]),
          'runOnTime': list([
          ]),
          'startTime': list([
          ]),
          'targetTemperature': list([
          ]),
          'ventilationStep': list([
          ]),
        }),
      }),
      'devices': dict({
        '000186528088': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '44',
              'fabNumber': '000186528088',
              'matNumber': '11387290',
              'swids': list([
                '5975',
                '20456',
                '25213',
                '25191',
                '25446',
                '25205',
                '25447',
                '25319',
              ]),
              'techType': 'WCI870',
            }),
            'deviceName': '',
            'protocolVersion': 4,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Washing machine',
              'value_raw': 1,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '08.32',
              'techType': 'EK057',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': '',
              'value_raw': 0,
            }),
            'ambientLight': None,
            'batteryLevel': None,
            'coreTargetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'coreTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': None,
            'elapsedTime': list([
              0,
              0,
            ]),
            'light': None,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 0,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': '',
              'value_raw': 0,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': True,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'Off',
              'value_raw': 1,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '',
              'value_raw': None,
            }),
          }),
        }),
        'Appliance_1': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '21',
              'fabNumber': 'Appliance_1',
              'matNumber': '10805070',
              'swids': list([
                '4497',
              ]),
              'techType': 'FNS 28463 E ed/',
            }),
            'deviceName': '',
            'protocolVersion': 201,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Freezer',
              'value_raw': 20,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '31.17',
              'techType': 'EK042',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': '',
              'value_raw': 0,
            }),
            'ambientLight': None,
            'batteryLevel': None,
            'coreTargetTemperature': list([
            ]),
            'coreTemperature': list([
            ]),
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': None,
            'elapsedTime': list([
            ]),
            'light': None,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 0,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': '',
              'value_raw': 0,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': False,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'In use',
              'value_raw': 5,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': -18,
                'value_raw': -1800,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': -18,
                'value_raw': -1800,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '',
              'value_raw': None,
            }),
          }),
        }),
        'Appliance_2': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '17',
              'fabNumber': 'Appliance_2',
              'matNumber': '10804770',
              'swids': list([
                '4497',
              ]),
              'techType': 'KS 28423 D ed/c',
            }),
            'deviceName': '',
            'protocolVersion': 201,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Refrigerator',
              'value_raw': 19,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '31.17',
              'techType': 'EK042',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': '',
              'value_raw': 0,
            }),
            'ambientLight': None,
            'batteryLevel': None,
            'coreTargetTemperature': list([
            ]),
            'coreTemperature': list([
            ]),
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': None,
            'elapsedTime': list([
            ]),
            'light': None,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 0,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': '',
              'value_raw': 0,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': False,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'In use',
              'value_raw': 5,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': 4,
                'value_raw': 400,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': 4,
                'value_raw': 400,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '',
              'value_raw': None,
            }),
          }),
        }),
        'Appliance_Oven': dict({
          'ident': dict({
            'deviceIdentLabel': dict({
              'fabIndex': '00',
              'fabNumber': '123456',
              'matNumber': '',
              'swids': list([
                'swid00',
              ]),
              'techType': 'H7264B',
            }),
            'deviceName': '',
            'protocolVersion': 4,
            'type': dict({
              'key_localized': 'Device type',
              'value_localized': 'Oven',
              'value_raw': 12,
            }),
            'xkmIdentLabel': dict({
              'releaseVersion': '08.21',
              'techType': 'EK057',
            }),
          }),
          'state': dict({
            'ProgramID': dict({
              'key_localized': 'Program name',
              'value_localized': 'Fan plus',
              'value_raw': 13,
            }),
            'ambientLight': None,
            'batteryLevel': None,
            'dryingStep': dict({
              'key_localized': 'Drying level',
              'value_localized': '',
              'value_raw': None,
            }),
            'ecoFeedback': None,
            'elapsedTime': list([
              0,
              0,
            ]),
            'light': 2,
            'plateStep': list([
            ]),
            'programPhase': dict({
              'key_localized': 'Program phase',
              'value_localized': '',
              'value_raw': 0,
            }),
            'programType': dict({
              'key_localized': 'Program type',
              'value_localized': 'Own program',
              'value_raw': 1,
            }),
            'remainingTime': list([
              0,
              0,
            ]),
            'remoteEnable': dict({
              'fullRemoteControl': True,
              'mobileStart': False,
              'smartGrid': False,
            }),
            'signalDoor': False,
            'signalFailure': False,
            'signalInfo': False,
            'spinningSpeed': dict({
              'key_localized': 'Spin speed',
              'unit': 'rpm',
              'value_localized': None,
              'value_raw': None,
            }),
            'startTime': list([
              0,
              0,
            ]),
            'status': dict({
              'key_localized': 'status',
              'value_localized': 'Programmed',
              'value_raw': 3,
            }),
            'targetTemperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': '180.0',
                'value_raw': 18000,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'temperature': list([
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
              dict({
                'unit': 'Celsius',
                'value_localized': None,
                'value_raw': -32768,
              }),
            ]),
            'ventilationStep': dict({
              'key_localized': 'Fan level',
              'value_localized': '',
              'value_raw': None,
            }),
          }),
        }),
      }),
      'programs': list([
        dict({
          'parameters': dict({
          }),
          'program': 'QuickPowerWash',
          'programId': 146,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Dark garments / Denim',
          'programId': 123,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'ECO 40-60 ',
          'programId': 190,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Proofing',
          'programId': 27,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Shirts',
          'programId': 23,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Silks ',
          'programId': 9,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Woollens ',
          'programId': 8,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Delicates',
          'programId': 4,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Minimum iron',
          'programId': 3,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Cottons',
          'programId': 1,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Cottons hygiene',
          'programId': 69,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Outerwear',
          'programId': 37,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Express 20',
          'programId': 122,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Sportswear',
          'programId': 29,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Automatic plus',
          'programId': 31,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Pillows',
          'programId': 39,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Curtains',
          'programId': 22,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Down filled items',
          'programId': 129,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'First wash',
          'programId': 53,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Down duvets',
          'programId': 95,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Separate rinse / Starch',
          'programId': 52,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Drain / Spin',
          'programId': 21,
        }),
        dict({
          'parameters': dict({
          }),
          'program': 'Clean machine',
          'programId': 91,
        }),
      ]),
    }),
  })
# ---
